--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ proc-macro = true
 anyhow = "1.0.83"
 
 [dependencies]
+darling = "0.20.8"
 proc-macro2 = "1.0.82"
 quote = "1.0.36"
 syn = { version = "2.0.57", features = ["extra-traits"] }
